--- a/azure-resources/EventGrid/topics/recommendations.yaml
+++ b/azure-resources/EventGrid/topics/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Configure Diagnostic Settings for all Azure Event Grid resources
+- description: すべての Azure Event Grid リソースの診断設定を構成する
   aprlGuid: 54c3191b-b535-1946-bba9-b754f44060f6
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Low
   recommendationResourceType: Microsoft.EventGrid/topics
   recommendationMetadataState: Active
-  longDescription: |
-    Enabling diagnostic settings on Azure Event Grid resources like custom topics, system topics, and domains lets you capture and view diagnostic information to troubleshoot failures effectively.
+  longDescription: |-
+    カスタム トピック、システム トピック、ドメインなどの Azure Event Grid リソースで診断設定を有効にすると、診断情報を取得して表示し、障害を効果的にトラブルシューティングできるようになります。
   potentialBenefits: Enhanced troubleshooting for Event Grid
   pgVerified: false
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Azure Event Grid - Enable diagnostic logs for Event Grid resources
       url: "https://learn.microsoft.com/en-us/azure/event-grid/enable-diagnostic-logs-topic"
-
-- description: Configure Dead-letter to save events that cannot be delivered
+- description: 配信できないイベントを保存するためにデッドレターを構成する
   aprlGuid: 92162eb5-4323-3145-8a6c-525ce2f0700e
   recommendationTypeId: null
   recommendationControl: Automation
   recommendationImpact: Low
   recommendationResourceType: Microsoft.EventGrid/topics
   recommendationMetadataState: Active
-  longDescription: |
-    Event Grid may not deliver an event within a specific time or after several attempts, leading to dead-lettering where undelivered events are sent to a storage account.
+  longDescription: |-
+    Event Grid は、特定の時間内または数回試行してもイベントを配信できない場合があり、配信されないイベントがストレージ アカウントに送信される配信不能が発生します。
   potentialBenefits: Saves undelivered events
   pgVerified: false
   publishedToLearn: false
@@ -35,16 +34,15 @@
   learnMoreLink:
     - name: Azure Event Grid delivery and retry
       url: "https://learn.microsoft.com/en-us/azure/event-grid/delivery-and-retry#dead-letter-events"
-
-- description: Configure Private Endpoints
+- description: プライベートエンドポイントの構成
   aprlGuid: b2069f64-4741-3d4a-a71d-50c8b03f5ab7
   recommendationTypeId: null
   recommendationControl: Security
   recommendationImpact: Low
   recommendationResourceType: Microsoft.EventGrid/topics
   recommendationMetadataState: Active
-  longDescription: |
-    Use private endpoints for secure event ingress to custom topics/domains via a private link, avoiding the public internet. It employs an IP from the VNet space for your topic/domain.
+  longDescription: |-
+    プライベート エンドポイントを使用して、パブリック インターネットを回避し、プライベート リンク経由でカスタム トピック/ドメインへの安全なイベント受信を行います。トピック/ドメインの VNet 空間からの IP を使用します。
   potentialBenefits: Secure, private VNet ingress
   pgVerified: false
   publishedToLearn: false
