--- a/azure-resources/DBforPostgreSQL/flexibleServers/recommendations.yaml
+++ b/azure-resources/DBforPostgreSQL/flexibleServers/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Enable HA with zone redundancy
+- description: ゾーン冗長性による HA の有効化
   aprlGuid: ca87914f-aac4-4783-ab67-82a6f936f194
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.DBforPostgreSQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Enable HA with zone redundancy on flexible server instances to deploy a standby replica in a different zone, offering automatic failover capability for improved reliability and disaster recovery.
+  longDescription: |-
+    フレキシブル サーバー インスタンス上でゾーン冗長性を備えた HA を有効にして、スタンバイ レプリカを別のゾーンにデプロイし、信頼性と災害復旧を向上させるための自動フェイルオーバー機能を提供します。
   potentialBenefits: Enhanced uptime and data protection
   pgVerified: true
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Overview of high availability with Azure Database for PostgreSQL
       url: "https://learn.microsoft.com/azure/postgresql/flexible-server/concepts-high-availability"
-
-- description: Enable custom maintenance schedule
+- description: カスタム メンテナンス スケジュールを有効にする
   aprlGuid: b2bad57d-7e03-4c0f-9024-597c9eb295bb
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: High
   recommendationResourceType: Microsoft.DBforPostgreSQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Use custom maintenance schedule on flexible server instances to select a preferred time for service updates to be applied.
+  longDescription: |-
+    フレキシブル サーバー インスタンスでカスタム メンテナンス スケジュールを使用して、サービス更新を適用する希望の時間を選択します。
   potentialBenefits: Control update timings
   pgVerified: true
   publishedToLearn: false
