--- a/azure-resources/DesktopVirtualization/hostPools/recommendations.yaml
+++ b/azure-resources/DesktopVirtualization/hostPools/recommendations.yaml
@@ -1,14 +1,14 @@
-﻿- description: (Personal) Create a validation pool for testing of planned updates
+- description: (個人) 計画された更新をテストするための検証プールを作成する
   aprlGuid: 97d4d8c1-eeb4-4506-b338-79a4949c993b
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: Low
   recommendationResourceType: Microsoft.DesktopVirtualization/hostPools
   recommendationMetadataState: Active
-  longDescription: |
-    At least one Validation Pool to have early warning if a planned update to AVD causes an issue. Also check that the host pool has been used regularly to test planned updates.
-    Host pools are a collection of one or more identical virtual machines within Azure Virtual Desktop environment. We highly recommend you create a validation host pool where service updates are applied first. Validation host pools let you monitor service updates before the service applies them to your standard or non-validation environment. Without a validation host pool, you may not discover changes that introduce errors, which could result in downtime for users in your standard environment.
-    To ensure your apps work with the latest updates, the validation host pool should be as similar to host pools in your non-validation environment as possible. Users should connect as frequently to the validation host pool as they do to the standard host pool. If you have automated testing on your host pool, you should include automated testing on the validation host pool.
+  longDescription: |-
+    AVD への計画された更新によって問題が発生した場合に、少なくとも 1 つの検証プールで早期警告が行われます。また、計画された更新をテストするためにホスト プールが定期的に使用されていることも確認してください。
+    ホスト プールは、Azure Virtual Desktop 環境内の 1 つ以上の同一の仮想マシンの集合です。サービスの更新が最初に適用される検証ホスト プールを作成することを強くお勧めします。検証ホスト プールを使用すると、サービスが標準環境または非検証環境にサービスの更新を適用する前に、サービスの更新を監視できます。検証ホスト プールがないと、エラーを引き起こす変更を検出できない可能性があり、その結果、標準環境のユーザーにダウンタイムが発生する可能性があります。
+    アプリが最新の更新で動作することを確認するには、検証ホスト プールは非検証環境のホスト プールと可能な限り類似している必要があります。ユーザーは、標準ホスト プールと同じくらい頻繁に検証ホスト プールに接続する必要があります。ホスト プールで自動テストを行っている場合は、検証ホスト プールでの自動テストを含める必要があります。
   potentialBenefits: Early issue detection and testing for AVD updates
   pgVerified: true
   publishedToLearn: false
@@ -18,17 +18,16 @@
   learnMoreLink:
     - name: Learn More
       url: "https://learn.microsoft.com/en-us/azure/virtual-desktop/configure-validation-environment?tabs=azure-portal"
-
-- description: (Pooled) Configure scheduled agent updates
+- description: (プール) スケジュールされたエージェント更新を構成する
   aprlGuid: 9fc522c1-d5b0-4bad-8169-1e1d32855afd
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.DesktopVirtualization/hostPools
   recommendationMetadataState: Active
-  longDescription: |
-    Ensure schedules have been created to provide maintenance windows for AVD agent updates.
-    The Scheduled Agent Updates feature lets you create up to two maintenance windows for the Azure Virtual Desktop agent, side-by-side stack, and Geneva Monitoring agent to get updated so that updates don't happen during peak business hours.
+  longDescription: |-
+    AVD エージェントのアップデートのためのメンテナンス期間を提供するスケジュールが作成されていることを確認します。
+    スケジュールされたエージェント更新機能を使用すると、Azure Virtual Desktop エージェント、サイドバイサイド スタック、および Geneva Monitoring エージェントを更新するためのメンテナンス時間帯を最大 2 つ作成して、ピーク業務時間中に更新が行われないようにすることができます。
   potentialBenefits: Minimizes disruptions, ensures updates
   pgVerified: true
   publishedToLearn: false
@@ -38,19 +37,18 @@
   learnMoreLink:
     - name: Learn More
       url: "https://learn.microsoft.com/en-us/azure/virtual-desktop/scheduled-agent-updates"
-
-- description: (Pooled) Create a validation pool for testing of planned updates
+- description: (プール) 計画された更新をテストするための検証プールを作成します。
   aprlGuid: 0a22b144-6fa7-4032-be77-fa64152858eb
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.DesktopVirtualization/hostPools
   recommendationMetadataState: Active
-  longDescription: |
-    At least one Validation Pool to have early warning if a planned update to AVD causes an issue. support to adjust limits based on your business requirements. To handle a large number of users, consider scaling horizontally by creating multiple host pools.
-    Also check that the host pool has been used regularly to test planned updates.
-    Host pools are a collection of one or more identical virtual machines within Azure Virtual Desktop environment. We highly recommend you create a validation host pool where service updates are applied first. Validation host pools let you monitor service updates before the service applies them to your standard or non-validation environment. Without a validation host pool, you may not discover changes that introduce errors, which could result in downtime for users in your standard environment.
-    To ensure your apps work with the latest updates, the validation host pool should be as similar to host pools in your non-validation environment as possible. Users should connect as frequently to the validation host pool as they do to the standard host pool. If you have automated testing on your host pool, you should include automated testing on the validation host pool.
+  longDescription: |-
+    AVD への計画された更新によって問題が発生した場合に、少なくとも 1 つの検証プールで早期警告が行われます。ビジネス要件に基づいて制限を調整するためのサポート。多数のユーザーを処理するには、複数のホスト プールを作成して水平方向にスケーリングすることを検討してください。
+    また、計画された更新をテストするためにホスト プールが定期的に使用されていることも確認してください。
+    ホスト プールは、Azure Virtual Desktop 環境内の 1 つ以上の同一の仮想マシンの集合です。サービスの更新が最初に適用される検証ホスト プールを作成することを強くお勧めします。検証ホスト プールを使用すると、サービスが標準環境または非検証環境にサービスの更新を適用する前に、サービスの更新を監視できます。検証ホスト プールがないと、エラーを引き起こす変更を検出できない可能性があり、その結果、標準環境のユーザーにダウンタイムが発生する可能性があります。
+    アプリが最新の更新で動作することを確認するには、検証ホスト プールは非検証環境のホスト プールと可能な限り類似している必要があります。ユーザーは、標準ホスト プールと同じくらい頻繁に検証ホスト プールに接続する必要があります。ホスト プールで自動テストを行っている場合は、検証ホスト プールでの自動テストを含める必要があります。
   potentialBenefits: Early detection of update issues.
   pgVerified: true
   publishedToLearn: false
@@ -60,18 +58,17 @@
   learnMoreLink:
     - name: Learn More
       url: "https://learn.microsoft.com/en-us/azure/virtual-desktop/configure-validation-environment?tabs=azure-portal"
-
-- description: Monitor Service Health and Resource Health of AVD
+- description: AVD のサービスの健全性とリソースの健全性を監視する
   aprlGuid: a75a20e7-8cc0-4f7b-b4a9-e2476bd72429
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: High
   recommendationResourceType: Microsoft.DesktopVirtualization/hostPools
   recommendationMetadataState: Active
-  longDescription: |
-    Use Service Health to stay informed about the health of the Azure services and regions that you use to insure their availability.
-    Set up Service Health alerts so that you stay aware of service issues, planned maintenance, or other changes that might affect your Azure Virtual Desktop resources.
-    Use Resource Health to monitor your VMs and storage solutions.
+  longDescription: |-
+    Service Health を使用して、可用性を確保するために使用する Azure サービスとリージョンの正常性に関する最新情報を入手します。
+    サービス正常性アラートを設定して、サービスの問題、計画されたメンテナンス、または Azure Virtual Desktop リソースに影響を与える可能性のあるその他の変更を常に把握できるようにします。
+    Resource Health を使用して、VM とストレージ ソリューションを監視します。
   potentialBenefits: Enhanced AVD uptime and awareness
   pgVerified: true
   publishedToLearn: false
@@ -81,16 +78,15 @@
   learnMoreLink:
     - name: Learn More
       url: "https://learn.microsoft.com/en-us/azure/well-architected/azure-virtual-desktop/monitoring#resource-health"
-
-- description: Scaling plans should be created per region and not scaled across regions
+- description: スケーリング プランはリージョンごとに作成する必要があり、リージョン間でスケールすることはできません。
   aprlGuid: e091419d-10ba-4a8e-bdb0-67380cc021a9
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.DesktopVirtualization/hostPools
   recommendationMetadataState: Active
-  longDescription: |
-    Each region has its own scaling plans assigned to host pools within that region. However, these plans can become inaccessible if there's a regional failure. To mitigate this risk, it's advisable to create a secondary scaling plan in another region.
+  longDescription: |-
+    各リージョンには、そのリージョン内のホスト プールに割り当てられた独自のスケーリング プランがあります。ただし、地域で障害が発生した場合、これらの計画にアクセスできなくなる可能性があります。このリスクを軽減するには、別のリージョンにセカンダリ スケーリング プランを作成することをお勧めします。
   potentialBenefits: Enhances reliability across failures
   pgVerified: true
   publishedToLearn: false
