--- a/azure-resources/EventHub/namespaces/recommendations.yaml
+++ b/azure-resources/EventHub/namespaces/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Don't disable zone redundancy
+- description: ゾーン冗長性を無効にしないでください
   aprlGuid: 84636c6c-b317-4722-b603-7b1ffc16384b
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.EventHub/namespaces
   recommendationMetadataState: Disabled
-  longDescription: |
-   When you use the Azure portal, zone redundancy via support for availability zones is automatically enabled. Avoid disabling this capability to continue replicating metadata and data (events) across data centers in an availability zone.
+  longDescription: |-
+    Azure portal を使用すると、可用性ゾーンのサポートによるゾーン冗長性が自動的に有効になります。アベイラビリティ ゾーン内のデータ センター間でメタデータとデータ (イベント) の複製を継続するには、この機能を無効にしないでください。
   potentialBenefits: Enhanced fault tolerance for Event Hub
   pgVerified: false
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Azure Event Hubs - Geo-disaster recovery
       url: "https://learn.microsoft.com/azure/event-hubs/event-hubs-geo-dr?tabs=portal#availability-zones"
-
-- description: Enable auto-inflate on Event Hub Standard tier
+- description: Event Hub Standard レベルで自動インフレを有効にする
   aprlGuid: fbfef3df-04a5-41b2-a8fd-b8541eb04956
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: High
   recommendationResourceType: Microsoft.EventHub/namespaces
   recommendationMetadataState: Active
-  longDescription: |
-    Enable auto-inflate on Event Hub Standard tier namespaces to automatically scale up TUs, meeting usage needs and preventing data ingress or egress throttle scenarios by adjusting to allowed rates.
+  longDescription: |-
+    Event Hub Standard レベルの名前空間で自動インフレを有効にして、TU を自動的にスケールアップし、使用量のニーズを満たし、許可されたレートに調整することでデータの受信または送信のスロットル シナリオを防ぎます。
   potentialBenefits: Prevents throttling by autoscaling TUs
   pgVerified: false
   publishedToLearn: false
