--- a/azure-resources/Insights/activityLogAlerts/recommendations.yaml
+++ b/azure-resources/Insights/activityLogAlerts/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Configure Resource Health Alerts
+- description: リソース健全性アラートの構成
   aprlGuid: be448849-0d7d-49ba-9c94-9573ee533d5d
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Low
   recommendationResourceType: microsoft.insights/activityLogAlerts
   recommendationMetadataState: Active
-  longDescription: |
-    Configure Resource Health Alerts for all applicable resources to stay informed about the current and historical health status of your Azure resources. They notify you when these resources have a change in their health status.
+  longDescription: |-
+    該当するすべてのリソースに対してリソース正常性アラートを構成して、Azure リソースの現在および過去の正常性状態に関する最新情報を常に把握できるようにします。これらのリソースの健全性状態に変化があった場合に通知します。
   potentialBenefits: Stay informed on resource status
   pgVerified: true
   publishedToLearn: false
@@ -20,16 +20,15 @@
       url: "https://learn.microsoft.com/en-us/azure/service-health/resource-health-alert-monitor-guide#create-a-resource-health-alert-rule-in-the-azure-portal"
     - name: Alerts Health
       url: "https://learn.microsoft.com/en-us/azure/service-health/alerts-activity-log-service-notifications-portal"
-
-- description: Configure Service Health Alerts
+- description: サービス健全性アラートの構成
   aprlGuid: 9729c89d-8118-41b4-a39b-e12468fa872b
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: High
   recommendationResourceType: microsoft.insights/activityLogAlerts
   recommendationMetadataState: Active
-  longDescription: |
-    Service health gives a personalized health view of Azure services and regions used, offering the best place for notifications on outages, planned maintenance, and health advisories by knowing the services used.
+  longDescription: |-
+    サービスの正常性では、使用されている Azure サービスとリージョンのパーソナライズされた正常性ビューが提供され、使用されているサービスを把握することで、停止、計画されたメンテナンス、正常性に関する勧告に関する通知に最適な場所が提供されます。
   potentialBenefits: Proactive outage and maintenance alerts
   pgVerified: true
   publishedToLearn: false
