--- a/azure-resources/Insights/components/recommendations.yaml
+++ b/azure-resources/Insights/components/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Convert Classic Deployments
+- description: クラシック デプロイメントの変換
   aprlGuid: dac421ec-2832-4c37-839e-b6dc5a38f2fa
   recommendationTypeId: null
   recommendationControl: Service Upgrade And Retirement
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Insights/components
   recommendationMetadataState: Active
-  longDescription: |
-    Classic Application Insights retires in February 2024. To minimize disruption to existing application monitoring scenarios, transition to workspace-based Application Insights before 29 February 2024.
+  longDescription: |-
+    Classic Application Insights は 2024 年 2 月に廃止されます。既存のアプリケーション監視シナリオへの中断を最小限に抑えるために、2024 年 2 月 29 日までにワークスペースベースの Application Insights に移行してください。
   potentialBenefits: Avoid service disruption post-Feb 2024
   pgVerified: false
   publishedToLearn: false
