--- a/azure-resources/KeyVault/vaults/recommendations.yaml
+++ b/azure-resources/KeyVault/vaults/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Key vaults should have soft delete enabled
+- description: キー コンテナーでは論理的な削除を有効にする必要があります
   aprlGuid: 1cca00d2-d9ab-8e42-a788-5d40f49405cb
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.KeyVault/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Key Vault's soft-delete feature enables recovery of deleted vaults and objects like keys, secrets, and certificates. When enabled, marked resources are retained for 90 days, allowing for their recovery, essentially undoing deletion.
+  longDescription: |-
+    Key Vault の論理的な削除機能を使用すると、削除されたコンテナーと、キー、シークレット、証明書などのオブジェクトを回復できます。有効にすると、マークされたリソースは 90 日間保持され、復元が可能になり、基本的に削除を元に戻すことができます。
   potentialBenefits: Enables recovery of deleted items
   pgVerified: false
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Azure Key Vault soft-delete overview
       url: "https://learn.microsoft.com/azure/key-vault/general/soft-delete-overview"
-
-- description: Key vaults should have purge protection enabled
+- description: Key Vault ではパージ保護を有効にする必要があります
   aprlGuid: 70fcfe6d-00e9-5544-a63a-fff42b9f2edb
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.KeyVault/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Purge protection secures against malicious deletions by enforcing a retention period for soft deleted key vaults, ensuring no one, not even insiders or Microsoft, can purge your key vaults during this period, preventing permanent data loss.
+  longDescription: |-
+    パージ保護は、論理的に削除されたキー コンテナーの保持期間を強制することで悪意のある削除を防ぎ、この期間中は内部関係者や Microsoft であってもキー コンテナーをパージできないようにし、永久的なデータ損失を防ぎます。
   potentialBenefits: Protects from insider attacks, avoids data loss
   pgVerified: false
   publishedToLearn: false
@@ -35,16 +34,15 @@
   learnMoreLink:
     - name: Azure Key Vault purge-protection overview
       url: "https://learn.microsoft.com/azure/key-vault/general/soft-delete-overview#purge-protection"
-
-- description: Enable Azure Private Link Service for Key vault
+- description: Key Vault の Azure Private Link サービスを有効にする
   aprlGuid: 00c3d2b0-ea6e-4c4b-89be-b78a35caeb51
   recommendationTypeId: null
   recommendationControl: Security
   recommendationImpact: High
   recommendationResourceType: Microsoft.KeyVault/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Azure Private Link Service lets you securely and privately connect to Azure Key Vault via a Private Endpoint in your VNet, using a private IP and eliminating public Internet exposure.
+  longDescription: |-
+    Azure Private Link Service を使用すると、プライベート IP を使用し、パブリック インターネットへの露出を排除して、VNet のプライベート エンドポイント経由で Azure Key Vault に安全かつプライベートに接続できます。
   potentialBenefits: Secure Key Vault with Private Link
   pgVerified: false
   publishedToLearn: false
@@ -54,16 +52,15 @@
   learnMoreLink:
     - name: Azure Key Vault Private Link Service overview
       url: "https://learn.microsoft.com/azure/key-vault/general/security-features#network-security"
-
-- description: Use separate key vaults per application per environment
+- description: 環境ごとにアプリケーションごとに個別のキー コンテナーを使用する
   aprlGuid: e7091145-3642-bd41-bb58-66502e64d2cd
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: High
   recommendationResourceType: Microsoft.KeyVault/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Key vaults are security boundaries for secret storage. Grouping secrets together increases risk during a security event, as attacks could access multiple secrets.
+  longDescription: |-
+    Key Vault は、シークレット ストレージのセキュリティ境界です。シークレットをグループ化すると、攻撃が複数のシークレットにアクセスする可能性があるため、セキュリティ イベント中のリスクが増加します。
   potentialBenefits: Enhanced security, Reduced risk
   pgVerified: false
   publishedToLearn: false
@@ -73,16 +70,15 @@
   learnMoreLink:
     - name: Azure Key Vault best practices overview
       url: "https://learn.microsoft.com/azure/key-vault/general/best-practices#why-we-recommend-separate-key-vaults"
-
-- description: Diagnostic logs in Key Vault should be enabled
+- description: Key Vault の診断ログを有効にする必要があります
   aprlGuid: 1dc0821d-4f14-7644-bab4-ba208ff5f7fa
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Low
   recommendationResourceType: Microsoft.KeyVault/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Enable logs, set up alerts, and adhere to retention requirements for improved monitoring and security of Key Vault access, detailing the frequency and identity of users.
+  longDescription: |-
+    ログを有効にし、アラートを設定し、Key Vault アクセスの監視とセキュリティを向上させるための保持要件を遵守し、ユーザーの頻度と ID を詳細に指定します。
   potentialBenefits: Enhanced monitoring and security compliance
   pgVerified: false
   publishedToLearn: false
