--- a/azure-resources/Network/connections/recommendations.yaml
+++ b/azure-resources/Network/connections/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: For better data path performance enable FastPath on ExpressRoute Direct and Gateway
+- description: データ パスのパフォーマンスを向上させるには、ExpressRoute Direct とゲートウェイで FastPath を有効にします。
   aprlGuid: f6a14b32-a727-4ace-b5fa-7b1c6bdff402
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/connections
   recommendationMetadataState: Active
-  longDescription: |
-    ExpressRoute gateways facilitate network traffic and route exchanges. FastPath enhances on-premises to virtual network data path performance by directing traffic straight to virtual machines, bypassing the gateway for improved resiliency through reduced gateway utilization.
+  longDescription: |-
+    ExpressRoute ゲートウェイは、ネットワーク トラフィックとルート交換を容易にします。 FastPath は、ゲートウェイをバイパスしてトラフィックを仮想マシンに直接送信することで、オンプレミスから仮想ネットワークへのデータ パスのパフォーマンスを強化し、ゲートウェイの使用率を削減して復元力を向上させます。
   potentialBenefits: Enhances speed and resiliency
   pgVerified: true
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: About ExpressRoute FastPath
       url: "https://learn.microsoft.com/en-us/azure/expressroute/about-fastpath"
-
-- description: Configure an Azure Resource Lock on connections to prevent accidental deletion
+- description: 誤って削除されないように接続に Azure リソース ロックを構成する
   aprlGuid: a5f3a4bd-4cf1-4196-a3cb-f5a0876198b2
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/connections
   recommendationMetadataState: Active
-  longDescription: |
-    Configure an Azure Resource lock for Gateway Connection resources to prevent accidental deletion and maintain connectivity between on-premises networks and Azure workloads.
+  longDescription: |-
+    ゲートウェイ接続リソースの Azure リソース ロックを構成して、誤って削除されることを防ぎ、オンプレミス ネットワークと Azure ワークロード間の接続を維持します。
   potentialBenefits: Prevents accidental deletion of connections
   pgVerified: true
   publishedToLearn: false
