--- a/azure-resources/Network/ddosProtectionPlans/recommendations.yaml
+++ b/azure-resources/Network/ddosProtectionPlans/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Monitor Azure DDoS Protection Plan metrics
+- description: Azure DDoS Protection Plan メトリクスを監視する
   aprlGuid: ae054bf2-aefa-cf4a-8282-741194cef8da
   recommendationTypeId: null
   recommendationControl: Security
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/ddosProtectionPlans
   recommendationMetadataState: Active
-  longDescription: |
-    Azure DDoS Plan metrics differentiate packets and bytes by tags: Dropped (packets scrubbed by DDoS), Forwarded (packets to VIP not filtered), and No tag (total packets, sum of dropped and forwarded).
+  longDescription: |-
+    Azure DDoS プランのメトリックでは、タグによってパケットとバイトが区別されます: ドロップ (DDoS によってスクラブされたパケット)、転送 (フィルタリングされていない VIP へのパケット)、およびタグなし (総パケット数、ドロップと転送の合計)。
   potentialBenefits: Enhanced security and traffic insight
   pgVerified: false
   publishedToLearn: false
