--- a/azure-resources/Network/frontDoorWebApplicationFirewallPolicies/recommendations.yaml
+++ b/azure-resources/Network/frontDoorWebApplicationFirewallPolicies/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Inspect Azure Front Door WAF logs for wrongfully blocked legitimate requests
+- description: Azure Front Door WAF ログを検査して、不正にブロックされた正当な要求がないか確認する
   aprlGuid: d0cfe47f-686b-5043-bf83-5a3868acb80a
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/frontdoorWebApplicationFirewallPolicies
   recommendationMetadataState: Active
-  longDescription: |
-    WAF may mistakenly block legitimate requests (false positives). These can be identified by examining the last 24 hours of blocked requests in Log Analytics.
+  longDescription: |-
+    WAF は、正当なリクエストを誤ってブロックする可能性があります (誤検知)。これらは、Log Analytics で過去 24 時間のブロックされた要求を調べることで特定できます。
   potentialBenefits: Reduces false positives, improves access
   pgVerified: false
   publishedToLearn: false
@@ -22,16 +22,15 @@
       url: "https://learn.microsoft.com/azure/web-application-firewall/ag/application-gateway-waf-configuration?tabs=portal"
     - name: Fixing a false positive
       url: "https://learn.microsoft.com/azure/web-application-firewall/ag/web-application-firewall-troubleshoot#fixing-false-positives"
-
-- description: Check Azure Application Gateway WAF logs for mistakenly blocked valid requests
+- description: Azure Application Gateway WAF ログで、誤ってブロックされた有効な要求がないか確認します。
   aprlGuid: 537b4d94-edd1-4041-b13d-8217dfa485f0
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/frontdoorWebApplicationFirewallPolicies
   recommendationMetadataState: Active
-  longDescription: |
-    WAF may block legitimate requests as false positives. Identifying blocked requests within the last 24 hours through Log Analytics can help manage and mitigate these incorrect blockages efficiently.
+  longDescription: |-
+    WAF は、正当なリクエストを誤検知としてブロックする場合があります。 Log Analytics を通じて過去 24 時間以内にブロックされた要求を特定すると、これらの誤ったブロックを効率的に管理し、軽減することができます。
   potentialBenefits: Improve false positive identification
   pgVerified: false
   publishedToLearn: false
@@ -43,16 +42,15 @@
       url: "https://learn.microsoft.com/azure/web-application-firewall/ag/application-gateway-waf-metrics#logs-and-diagnostics"
     - name: Diagnostic logs
       url: "https://learn.microsoft.com/azure/web-application-firewall/ag/web-application-firewall-logs#diagnostic-logs"
-
-- description: Monitor Web Application Firewall
+- description: Web アプリケーション ファイアウォールを監視する
   aprlGuid: 5357ae22-0f52-1a49-9fd4-1f00ace6add0
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/frontdoorWebApplicationFirewallPolicies
   recommendationMetadataState: Active
-  longDescription: |
-    Monitoring the health of your Web Application Firewall and the applications it protects is crucial. This can be achieved through integration with Microsoft Defender for Cloud, Azure Monitor, and Azure Monitor logs, ensuring optimal performance and security.
+  longDescription: |-
+    Web アプリケーション ファイアウォールとそれが保護するアプリケーションの健全性を監視することは非常に重要です。これは、Microsoft Defender for Cloud、Azure Monitor、Azure Monitor ログとの統合によって実現され、最適なパフォーマンスとセキュリティが保証されます。
   potentialBenefits: Enhanced security and health insight
   pgVerified: false
   publishedToLearn: false
