--- a/azure-resources/Network/publicIPAddresses/recommendations.yaml
+++ b/azure-resources/Network/publicIPAddresses/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Use Standard SKU and Zone-Redundant IPs when applicable
+- description: 該当する場合は、標準 SKU とゾーン冗長 IP を使用します
   aprlGuid: c63b81fb-7afc-894c-a840-91bb8a8dcfaf
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/publicIPAddresses
   recommendationMetadataState: Active
-  longDescription: |
-    Public IP addresses in Azure can be of standard SKU, available as non-zonal, zonal, or zone-redundant. Zone-redundant IPs are accessible across all zones, resisting any single zone failure, thereby providing higher resilience.
+  longDescription: |-
+    Azure のパブリック IP アドレスは、標準 SKU であり、非ゾーン、ゾーン、またはゾーン冗長として利用できます。ゾーン冗長 IP はすべてのゾーンにわたってアクセス可能であり、単一ゾーンの障害に耐えることにより、より高い復元力を提供します。
   potentialBenefits: Enhanced resilience with zone redundancy
   pgVerified: false
   publishedToLearn: false
@@ -18,16 +18,15 @@
       url: "https://learn.microsoft.com/azure/virtual-network/ip-services/public-ip-addresses#availability-zone"
     - name: Upgrading a basic public IP address to Standard SKU
       url: "https://learn.microsoft.com/en-us/azure/virtual-network/ip-services/public-ip-basic-upgrade-guidance#steps-to-complete-the-upgrade"
-
-- description: Use NAT gateway for outbound connectivity to avoid SNAT Exhaustion
+- description: SNAT の枯渇を避けるために、送信接続に NAT ゲートウェイを使用する
   aprlGuid: 1adba190-5c4c-e646-8527-dd1b2a6d8b15
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/publicIPAddresses
   recommendationMetadataState: Active
-  longDescription: |
-    Prevent connectivity failures due to SNAT port exhaustion by employing NAT gateway for outbound traffic from virtual networks, ensuring dynamic scaling and secure internet connections.
+  longDescription: |-
+    仮想ネットワークからの送信トラフィックに NAT ゲートウェイを採用することで、SNAT ポートの枯渇による接続障害を防ぎ、動的なスケーリングと安全なインターネット接続を確保します。
   potentialBenefits: Avoids SNAT port exhaustion risks
   pgVerified: false
   publishedToLearn: false
@@ -39,16 +38,15 @@
       url: "https://learn.microsoft.com/azure/advisor/advisor-reference-reliability-recommendations#use-nat-gateway-for-outbound-connectivity"
     - name: TCP and SNAT Ports
       url: "https://learn.microsoft.com/azure/architecture/framework/services/compute/azure-app-service/reliability#tcp-and-snat-ports"
-
-- description: Upgrade Basic SKU public IP addresses to Standard SKU
+- description: Basic SKU のパブリック IP アドレスを Standard SKU にアップグレードする
   aprlGuid: 5cea1501-6fe4-4ec4-ac8f-f72320eb18d3
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/publicIPAddresses
   recommendationMetadataState: Active
-  longDescription: |
-    Basic SKU public IP addresses will be retired on September 30, 2025. Users are advised to upgrade to Standard SKU public IP addresses before this date to avoid service disruptions.
+  longDescription: |-
+    Basic SKU パブリック IP アドレスは、2025 年 9 月 30 日に廃止されます。ユーザーは、サービスの中断を避けるために、この日までに Standard SKU パブリック IP アドレスにアップグレードすることをお勧めします。
   potentialBenefits: Avoids service disruption
   pgVerified: false
   publishedToLearn: false
