--- a/azure-resources/Network/routeTables/recommendations.yaml
+++ b/azure-resources/Network/routeTables/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Monitor changes in Route Tables with Azure Monitor
+- description: Azure Monitor を使用してルート テーブルの変更を監視する
   aprlGuid: 23b2dfc7-7e5d-9443-9f62-980ca621b561
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Low
   recommendationResourceType: Microsoft.Network/routeTables
   recommendationMetadataState: Active
-  longDescription: |
-    Create Alerts with Azure Monitor for operations like Create or Update Route Table to spot unauthorized/undesired changes in production resources. This setup aids in identifying improper routing changes, including efforts to evade firewalls or access resources from outside.
+  longDescription: |-
+    ルート テーブルの作成や更新などの操作に対して Azure Monitor を使用してアラートを作成し、運用リソースにおける不正な変更や望ましくない変更を特定します。この設定は、ファイアウォールを回避したり、外部からリソースにアクセスしたりする試みなど、不適切なルーティング変更を特定するのに役立ちます。
   potentialBenefits: Enhanced security and change detection
   pgVerified: false
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Azure activity log - Azure Monitor | Microsoft Learn
       url: "https://learn.microsoft.com/en-us/azure/azure-monitor/essentials/activity-log?tabs=powershell"
-
-- description: Configure locks for Route Tables to avoid accidental changes or deletion
+- description: 誤って変更または削除されないようにルート テーブルのロックを構成する
   aprlGuid: 89d1166a-1a20-0f46-acc8-3194387bf127
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: Low
   recommendationResourceType: Microsoft.Network/routeTables
   recommendationMetadataState: Active
-  longDescription: |
-    As an administrator, you can protect Azure subscriptions, resource groups, or resources from accidental deletions and modifications by setting locks.
+  longDescription: |-
+    管理者は、ロックを設定することで、Azure サブスクリプション、リソース グループ、またはリソースを誤って削除したり変更したりしないように保護できます。
   potentialBenefits: Prevents accidental edits/deletions
   pgVerified: false
   publishedToLearn: false
