--- a/azure-resources/Network/virtualNetworkGateways/recommendations.yaml
+++ b/azure-resources/Network/virtualNetworkGateways/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Connect ExpressRoute gateway with circuits from diverse peering locations for resilience
+- description: ExpressRoute ゲートウェイをさまざまなピアリングの場所からの回線に接続し、回復力を強化します
   aprlGuid: d37db635-157f-584d-9bce-4f6fc8c65ce5
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    To increase reliability, it's advised that each ExpressRoute gateway connects to at least two circuits, with each circuit originating from a different peering location than the other, ensuring diverse connectivity paths for enhanced resilience.
+  longDescription: |-
+    信頼性を高めるために、各 ExpressRoute ゲートウェイを少なくとも 2 つの回線に接続し、各回線が他の回線とは異なるピアリングの場所から発信され、回復力を強化するための多様な接続パスを確保することをお勧めします。
   potentialBenefits: Enhanced resiliency for Azure service
   pgVerified: true
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Designing for disaster recovery with ExpressRoute private peering
       url: "https://learn.microsoft.com/azure/expressroute/designing-for-disaster-recovery-with-expressroute-privatepeering"
-
-- description: Use Zone-redundant ExpressRoute gateway SKUs
+- description: ゾーン冗長 ExpressRoute ゲートウェイ SKU を使用する
   aprlGuid: bbe668b7-eb5c-c746-8b82-70afdedf0cae
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    Azure ExpressRoute gateway offers variable SLAs based on deployment in single or multiple availability zones. To deploy virtual network gateways across zones automatically, use zone-redundant gateways for accessing critical, scalable services with increased resilience.
+  longDescription: |-
+    Azure ExpressRoute ゲートウェイは、単一または複数の可用性ゾーンでのデプロイに基づいて可変 SLA を提供します。ゾーン間で仮想ネットワーク ゲートウェイを自動的にデプロイするには、ゾーン冗長ゲートウェイを使用して、回復力が強化された重要でスケーラブルなサービスにアクセスします。
   potentialBenefits: Enhanced SLA and resilience
   pgVerified: true
   publishedToLearn: false
@@ -39,16 +38,15 @@
       url: "https://learn.microsoft.com/azure/vpn-gateway/about-zone-redundant-vnet-gateways"
     - name: Create a zone-redundant virtual network gateway in Azure Availability Zones
       url: "https://learn.microsoft.com/azure/vpn-gateway/create-zone-redundant-vnet-gateway"
-
-- description: Configure an Azure Resource lock for ExpressRoute gateway to prevent accidental deletion
+- description: ExpressRoute ゲートウェイの Azure リソース ロックを構成して、誤って削除されないようにする
   aprlGuid: c0f23a92-d322-4d4d-97e9-a238b5e3bbb8
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    Configuring an Azure Resource lock for ExpressRoute gateway prevents accidental deletion by enabling administrators to lock an Azure subscription, resource group, or resource, thereby protecting them from unintended user deletions and modifications, with the lock overriding all user permissions.
+  longDescription: |-
+    ExpressRoute ゲートウェイの Azure リソース ロックを構成すると、管理者が Azure サブスクリプション、リソース グループ、またはリソースをロックできるようになり、ロックがすべてのユーザー アクセス許可をオーバーライドして、意図しないユーザーの削除や変更から保護できるため、誤って削除されることを防ぎます。
   potentialBenefits: Prevents accidental deletions
   pgVerified: true
   publishedToLearn: false
@@ -58,16 +56,15 @@
   learnMoreLink:
     - name: Protect your Azure resources with a lock - Azure Resource Manager | Microsoft Learn
       url: "https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/lock-resources?tabs=json"
-
-- description: Monitor gateway health for ExpressRoute gateways
+- description: ExpressRoute ゲートウェイのゲートウェイの正常性を監視する
   aprlGuid: 1c34faa8-8b99-974c-adbf-71922eae943c
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    Use Network Insights for monitoring ExpressRoute Gateway's health, including availability, performance, and scalability.
+  longDescription: |-
+    Network Insights を使用して、可用性、パフォーマンス、スケーラビリティなどの ExpressRoute Gateway の正常性を監視します。
   potentialBenefits: Enhanced monitoring and alerting
   pgVerified: true
   publishedToLearn: false
@@ -79,16 +76,15 @@
       url: "https://learn.microsoft.com/azure/expressroute/expressroute-monitoring-metrics-alerts#expressroute-gateways"
     - name: Azure ExpressRoute Insights using Network Insights
       url: "https://learn.microsoft.com/en-us/azure/expressroute/expressroute-network-insights"
-
-- description: Avoid using ExpressRoute circuits for VNet to VNet communication
+- description: VNet 間の通信に ExpressRoute 回線の使用を避ける
   aprlGuid: 194c14ac-0d7a-5a48-ae32-75fa450ee564
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    While multiple VNets can connect via the same ExpressRoute gateway, Microsoft recommends using alternatives like VNet peering, Azure Firewall, NVA, Azure Route Server, site-to-site VPN, virtual WAN, or SD-WAN for VNet-to-VNet communication to optimize network performance and management.
+  longDescription: |-
+    複数の VNet が同じ ExpressRoute ゲートウェイ経由で接続できますが、Microsoft では、VNet 間の通信には、VNet ピアリング、Azure Firewall、NVA、Azure Route Server、サイト間 VPN、仮想 WAN、SD-WAN などの代替手段を使用することをお勧めします。ネットワークのパフォーマンスと管理を最適化します。
   potentialBenefits: Enhanced VNet integration efficiency
   pgVerified: true
   publishedToLearn: false
@@ -98,16 +94,15 @@
   learnMoreLink:
     - name: About ExpressRoute virtual network gateways - VNet-to-VNet connectivity
       url: "https://learn.microsoft.com/azure/expressroute/expressroute-about-virtual-network-gateways#vnet-to-vnet-connectivity"
-
-- description: Configure customer-controlled ExpressRoute gateway maintenance
+- description: 顧客制御の ExpressRoute ゲートウェイ メンテナンスを構成する
   aprlGuid: 3e115044-a3aa-433e-be01-ce17d67e50da
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    ExpressRoute gateways are updated for improved functionality, reliability, performance, and security. Customer-controlled maintenance configuration and scheduling minimize update impact and align with your maintenance windows.
+  longDescription: |-
+    ExpressRoute ゲートウェイが更新され、機能、信頼性、パフォーマンス、セキュリティが向上しました。顧客が制御するメンテナンスの構成とスケジュールにより、更新の影響を最小限に抑え、メンテナンス期間に合わせて調整できます。
   potentialBenefits: Minimizes update impact
   pgVerified: true
   publishedToLearn: false
@@ -117,16 +112,15 @@
   learnMoreLink:
     - name: Configure customer-controlled maintenance for your virtual network gateway - ExpressRoute | Microsoft Learn
       url: "https://learn.microsoft.com/en-us/azure/expressroute/customer-controlled-gateway-maintenance#azure-portal-steps"
-
-- description: Choose a Zone-redundant VPN gateway
+- description: ゾーン冗長 VPN ゲートウェイを選択する
   aprlGuid: 5b1933a6-90e4-f642-a01f-e58594e5aab2
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    Azure VPN gateway offers variable SLAs based on deployment in one or two availability zones. Deploying zone-redundant virtual network gateways across availability zones ensures zone-resiliency, improving access to mission-critical, scalable services on Azure.
+  longDescription: |-
+    Azure VPN ゲートウェイは、1 つまたは 2 つの可用性ゾーンでのデプロイに基づいて可変 SLA を提供します。可用性ゾーン全体にゾーン冗長仮想ネットワーク ゲートウェイをデプロイすると、ゾーンの復元力が確保され、Azure 上のミッション クリティカルでスケーラブルなサービスへのアクセスが向上します。
   potentialBenefits: Enhanced reliability and scalability
   pgVerified: false
   publishedToLearn: false
@@ -140,16 +134,15 @@
       url: "https://learn.microsoft.com/azure/vpn-gateway/about-zone-redundant-vnet-gateways#gwskus"
     - name: SLA summary for Azure services
       url: "https://www.microsoft.com/licensing/docs/view/Service-Level-Agreements-SLA-for-Online-Services?lang=1"
-
-- description: Plan for Active-Active mode with VPN Gateways
+- description: VPN ゲートウェイを使用したアクティブ/アクティブ モードの計画
   aprlGuid: 281a2713-c0e0-3c48-b596-19f590c46671
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    The active-active mode is available for all SKUs except Basic, allowing for two Gateway IP configurations and two public IP addresses, enhancing redundancy and traffic handling.
+  longDescription: |-
+    アクティブ/アクティブ モードは、Basic を除くすべての SKU で利用でき、2 つのゲートウェイ IP 構成と 2 つのパブリック IP アドレスが可能になり、冗長性とトラフィック処理が強化されます。
   potentialBenefits: Enhanced reliability and network capacity
   pgVerified: false
   publishedToLearn: false
@@ -161,16 +154,15 @@
       url: "https://learn.microsoft.com/azure/vpn-gateway/active-active-portal#gateway"
     - name: Gateway SKU
       url: "https://learn.microsoft.com/azure/vpn-gateway/vpn-gateway-about-vpn-gateway-settings#gwsku"
-
-- description: Deploy active-active VPN concentrators on your premises for maximum resiliency with VPN gateways
+- description: アクティブ/アクティブ VPN コンセントレータをオンプレミスに導入して、VPN ゲートウェイの復元力を最大限に高めます
   aprlGuid: af11fc4c-c06c-4f4c-b98d-6eee6d5c4c70
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    Deploying active-active VPN concentrators and Azure VPN Gateways maximizes resilience and availability using a fully-meshed topology with four IPSec tunnels.
+  longDescription: |-
+    アクティブ/アクティブ VPN コンセントレーターと Azure VPN ゲートウェイを展開すると、4 つの IPSec トンネルを備えたフルメッシュ トポロジを使用して、復元力と可用性が最大化されます。
   potentialBenefits: Maximizes resilience and availability
   pgVerified: false
   publishedToLearn: false
@@ -180,16 +172,15 @@
   learnMoreLink:
     - name: Dual-redundancy active-active VPN gateways for both Azure and on-premises networks
       url: "https://learn.microsoft.com/azure/vpn-gateway/vpn-gateway-highlyavailable#dual-redundancy-active-active-vpn-gateways-for-both-azure-and-on-premises-networks"
-
-- description: Monitor VPN gateway connections and health
+- description: VPN ゲートウェイの接続と状態を監視する
   aprlGuid: 9eab120e-f6d3-ee49-ba0d-766562ce7df1
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    Set up monitoring and alerts for Virtual Network Gateway health to utilize a variety of metrics for ensuring operational efficiency and prompt response to any disruptions.
+  longDescription: |-
+    仮想ネットワーク ゲートウェイの健全性の監視とアラートを設定して、さまざまなメトリックを利用して、運用効率を確保し、中断に対する迅速な対応を確保します。
   potentialBenefits: Improved uptime and issue awareness
   pgVerified: false
   publishedToLearn: false
@@ -199,16 +190,15 @@
   learnMoreLink:
     - name: VPN gateway data reference
       url: "https://learn.microsoft.com/azure/vpn-gateway/monitor-vpn-gateway-reference"
-
-- description: Enable VPN gateway service health
+- description: VPN ゲートウェイ サービスの健全性を有効にする
   aprlGuid: 9186dae0-7ddc-8f4b-bea5-55538cea4893
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    VPN gateway leverages service health to inform users about both planned and unplanned maintenance, ensuring they are notified about modifications to their VPN connectivity.
+  longDescription: |-
+    VPN ゲートウェイは、サービスの健全性を活用して、計画的および計画外のメンテナンスについてユーザーに通知し、VPN 接続の変更について確実にユーザーに通知します。
   potentialBenefits: Improves VPN maintenance alerts
   pgVerified: false
   publishedToLearn: false
@@ -220,16 +210,15 @@
       url: "https://learn.microsoft.com/azure/azure-monitor/essentials/metrics-getting-started"
     - name: Monitor VPN gateway
       url: "https://learn.microsoft.com/azure/vpn-gateway/monitor-vpn-gateway-reference#metrics"
-
-- description: Deploy zone-redundant VPN gateways with zone-redundant Public IP(s)
+- description: ゾーン冗長パブリック IP を備えたゾーン冗長 VPN ゲートウェイを展開する
   aprlGuid: 4bae5a28-5cf4-40d9-bcf1-623d28f6d917
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Network/virtualNetworkGateways
   recommendationMetadataState: Active
-  longDescription: |
-    For zone-redundant VPN gateways, always use zone-redundant Standard SKU public IPs to avoid deploying all instances in one zone. This ensures the gateway's reliability, applying to both active-passive (single IP) and active-active (dual IP) setups.
+  longDescription: |-
+    ゾーン冗長 VPN ゲートウェイの場合は、すべてのインスタンスが 1 つのゾーンにデプロイされることを避けるために、常にゾーン冗長 Standard SKU パブリック IP を使用してください。これにより、アクティブ/パッシブ (シングル IP) セットアップとアクティブ/アクティブ (デュアル IP) セットアップの両方に適用され、ゲートウェイの信頼性が確保されます。
   potentialBenefits: Enhanced reliability and disaster recovery
   pgVerified: false
   publishedToLearn: false
