--- a/azure-resources/NetworkFunction/azureTrafficCollectors/recommendations.yaml
+++ b/azure-resources/NetworkFunction/azureTrafficCollectors/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Ensure ExpressRoute Traffic Collector is enabled and configured for ExpressRoute Direct circuits
+- description: ExpressRoute Traffic Collector が有効になっていて、ExpressRoute Direct 回線用に構成されていることを確認します。
   aprlGuid: 1ceea4b5-1d8b-4be0-9bbe-9594557be51a
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.NetworkFunction/azureTrafficCollectors
   recommendationMetadataState: Active
-  longDescription: |
-    ExpressRoute Traffic Collector samples network flows over ExpressRoute Direct circuits, sending flow logs to a Log Analytics workspace for analysis or export to visualization tools/SIEM.
+  longDescription: |-
+    ExpressRoute Traffic Collector は、ExpressRoute Direct 回線上のネットワーク フローをサンプリングし、フロー ログを分析のために Log Analytics ワークスペースに送信したり、視覚化ツール/SIEM にエクスポートしたりします。
   potentialBenefits: Enhanced network flow analysis and DR readiness
   pgVerified: true
   publishedToLearn: false
