--- a/azure-resources/RecoveryServices/vaults/recommendations.yaml
+++ b/azure-resources/RecoveryServices/vaults/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Ensure static IP addresses in Site Recovery VM failover settings are available in failover subnet
+- description: Site Recovery VM のフェールオーバー設定の静的 IP アドレスがフェールオーバー サブネットで利用可能であることを確認する
   aprlGuid: e93bb813-b356-48f3-9bdf-a06a0a6ba039
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.RecoveryServices/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Ensure VM failover settings' static IP addresses are available in the failover subnet to maintain consistent IP assignment during failover, with the target VM receiving the same static IP if it's available or the next available IP otherwise. IP adjustments can be made in VM Network settings.
+  longDescription: |-
+    VM フェールオーバー設定の静的 IP アドレスがフェールオーバー サブネットで利用可能であることを確認して、フェールオーバー中に一貫した IP 割り当てを維持します。ターゲット VM は、利用可能な場合は同じ静的 IP を受け取り、利用できない場合は次に利用可能な IP を受け取ります。 IP 調整は VM ネットワーク設定で行うことができます。
   potentialBenefits: Smooth failover IP management
   pgVerified: false
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Setup network mapping for site recovery
       url: "https://learn.microsoft.com/en-us/azure/site-recovery/azure-to-azure-network-mapping#set-up-ip-addressing-for-target-vms"
-
-- description: Validate VM functionality with a Site Recovery test failover to check performance at target
+- description: Site Recovery テスト フェールオーバーを使用して VM の機能を検証し、ターゲットでのパフォーマンスをチェックします
   aprlGuid: 17e877f7-3a89-4205-8a24-0670de54ddcd
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.RecoveryServices/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Perform a test failover to validate your BCDR strategy and ensure that your applications are functioning correctly in the target region without impacting your production environment. Test your Disaster Recovery plan periodically without any data loss or downtime, using test failovers.
+  longDescription: |-
+    テスト フェールオーバーを実行して BCDR 戦略を検証し、運用環境に影響を与えることなくターゲット リージョンでアプリケーションが正しく機能していることを確認します。テスト フェールオーバーを使用して、データ損失やダウンタイムを発生させずに障害復旧計画を定期的にテストします。
   potentialBenefits: Ensures BCDR plan accuracy and VM performance
   pgVerified: false
   publishedToLearn: false
@@ -35,16 +34,15 @@
   learnMoreLink:
     - name: Run a test failover
       url: "https://learn.microsoft.com/en-us/azure/site-recovery/azure-to-azure-tutorial-dr-drill#run-a-test-failover"
-
-- description: Migrate from classic alerts to built-in Azure Monitor alerts for Azure Recovery Services Vaults
+- description: クラシック アラートから Azure Recovery Services Vault の組み込みの Azure Monitor アラートに移行する
   aprlGuid: 2912472d-0198-4bdc-aa90-37f145790edc
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.RecoveryServices/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Classic alerts for Recovery Services vaults in Azure Backup will be retired on 31 March 2026.
+  longDescription: |-
+    Azure Backup の Recovery Services コンテナーのクラシック アラートは、2026 年 3 月 31 日に廃止されます。
   potentialBenefits: Enhanced, scalable, and consistent alerting.
   pgVerified: true
   publishedToLearn: false
@@ -56,16 +54,15 @@
       url: "https://learn.microsoft.com/azure/backup/move-to-azure-monitor-alerts"
     - name: Classic alerts retirement announcement
       url: "https://azure.microsoft.com/updates/transition-to-builtin-azure-monitor-alerts-for-recovery-services-vaults-in-azure-backup-by-31-march-2026/"
-
-- description: Opt-in to Cross Region Restore for all Geo-Redundant Storage (GRS) Azure Recovery Services vaults
+- description: すべての Geo-Redundant Storage (GRS) Azure Recovery Services コンテナーのクロスリージョン リストアをオプトインする
   aprlGuid: 1549b91f-2ea0-4d4f-ba2a-4596becbe3de
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.RecoveryServices/vaults
   recommendationMetadataState: Active
-  longDescription: |
-    Cross Region Restore enables the restoration of Azure VMs in a secondary, Azure paired region, facilitating drills for audit or compliance and allowing recovery of VMs or disks in the event of a primary region disaster. It is an opt-in feature available exclusively for GRS vaults.
+  longDescription: |-
+    クロスリージョン復元により、Azure ペアになったセカンダリ リージョンでの Azure VM の復元が可能になり、監査またはコンプライアンスの訓練が容易になり、プライマリ リージョンで障害が発生した場合に VM またはディスクを復旧できるようになります。これは、GRS コンテナーのみで使用できるオプトイン機能です。
   potentialBenefits: Enhances disaster recovery capabilities
   pgVerified: true
   publishedToLearn: false
