--- a/azure-resources/Resources/resourceGroups/recommendations.yaml
+++ b/azure-resources/Resources/resourceGroups/recommendations.yaml
@@ -1,12 +1,12 @@
-- description: Ensure Resource Group and its Resources are located in the same Region
+- description: リソース グループとそのリソースが同じリージョンに配置されていることを確認します
   aprlGuid: 98bd7098-49d6-491b-86f1-b143d6b1a0ff
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.Resources/resourceGroups
   recommendationMetadataState: Active
-  longDescription: |
-    Ensure resource locations align with their resource group to manage resources during regional outages. ARM stores resource data, which if in an unavailable region, could halt updates, rendering resources read-only.
+  longDescription: |-
+    リージョンの停止中にリソースを管理できるように、リソースの場所がリソース グループと一致していることを確認します。 ARM はリソース データを保存します。このデータが使用できないリージョンにある場合、更新が停止し、リソースが読み取り専用になる可能性があります。
   potentialBenefits: Improves outage management
   pgVerified: true
   publishedToLearn: false
