--- a/azure-resources/Storage/storageAccounts/recommendations.yaml
+++ b/azure-resources/Storage/storageAccounts/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Ensure that storage accounts are zone or region redundant
+- description: ストレージ アカウントがゾーンまたはリージョン冗長であることを確認する
   aprlGuid: e6c7e1cc-2f47-264d-aa50-1da421314472
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    Redundancy ensures storage accounts meet availability and durability targets amidst failures, weighing lower costs against higher availability. Locally redundant storage offers the least durability at the lowest cost.
+  longDescription: |-
+    冗長性により、障害が発生した場合でもストレージ アカウントが可用性と耐久性の目標を確実に満たすことができ、コストの削減と可用性の向上を比較検討できます。ローカル冗長ストレージは、最小限のコストで最小限の耐久性を提供します。
   potentialBenefits: High availability and durability for storage
   pgVerified: true
   publishedToLearn: false
@@ -18,16 +18,15 @@
       url: "https://learn.microsoft.com/azure/storage/common/storage-redundancy"
     - name: Change the redundancy configuration for a storage account
       url: "https://learn.microsoft.com/azure/storage/common/redundancy-migration"
-
-- description: Do not use classic storage accounts
+- description: 従来のストレージ アカウントを使用しないでください
   aprlGuid: 63ad027e-611c-294b-acc5-8e3234db9a40
   recommendationTypeId: null
   recommendationControl: Service Upgrade and Retirement
   recommendationImpact: High
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    Classic storage accounts will be fully retired on August 31, 2024. If you have classic storage accounts, start planning your migration now.
+  longDescription: |-
+    クラシック ストレージ アカウントは、2024 年 8 月 31 日に完全に廃止されます。クラシック ストレージ アカウントをお持ちの場合は、今すぐ移行の計画を開始してください。
   potentialBenefits: Avoids service retirement issues
   pgVerified: true
   publishedToLearn: false
@@ -39,16 +38,15 @@
       url: "https://azure.microsoft.com/updates/classic-azure-storage-accounts-will-be-retired-on-31-august-2024/"
     - name: Migrate your classic storage accounts to Azure Resource Manager
       url: "https://learn.microsoft.com/azure/storage/common/classic-account-migration-overview"
-
-- description: Ensure Performance tier is set as per workload
+- description: パフォーマンス層がワークロードごとに設定されていることを確認する
   aprlGuid: 5587ef77-7a05-a74d-9c6e-449547a12f27
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    Consider using the appropriate storage performance tier for workload scenarios. Each workload scenario requires appropriate performance tiers, and selecting the appropriate tiers based on storage usage is crucial.
+  longDescription: |-
+    ワークロード シナリオに適切なストレージ パフォーマンス層の使用を検討してください。各ワークロード シナリオには適切なパフォーマンス層が必要であり、ストレージの使用状況に基づいて適切な層を選択することが重要です。
   potentialBenefits: Optimized cost and performance
   pgVerified: true
   publishedToLearn: false
@@ -66,16 +64,15 @@
       url: "https://learn.microsoft.com/azure/storage/blobs/scalability-targets"
     - name: Premium block blob storage accounts
       url: "https://learn.microsoft.com/azure/storage/blobs/storage-blob-block-blob-premium"
-
-- description: Enable soft delete for recovery of data
+- description: データの回復のために論理的な削除を有効にする
   aprlGuid: 03263c57-c869-3841-9e0a-3dbb9ef3e28d
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    The soft delete option enables data recovery if mistakenly deleted, while the Lock feature prevents the accidental deletion of the storage account itself, ensuring additional security and data integrity measures.
+  longDescription: |-
+    論理的な削除オプションを使用すると、誤って削除した場合にデータを回復できます。一方、ロック機能は、ストレージ アカウント自体の誤った削除を防止し、追加のセキュリティとデータ整合性対策を確保します。
   potentialBenefits: Prevents accidental data/account loss
   pgVerified: true
   publishedToLearn: false
@@ -85,16 +82,15 @@
   learnMoreLink:
     - name: Soft delete detail docs
       url: "https://learn.microsoft.com//azure/storage/blobs/soft-delete-blob-enable?tabs=azure-portal "
-
-- description: Enable versioning for accidental modification and keep the number of versions below 1000
+- description: 偶発的な変更に備えてバージョン管理を有効にし、バージョン数を 1000 未満に保ちます。
   aprlGuid: 8ebda7c0-e0e1-ed45-af59-2d7ea9a1c05d
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Low
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    Consider enabling versioning for Azure Storage Accounts to recover from accidental modifications or deletions and manage blob operation latency. Microsoft advises maintaining fewer than 1000 versions per blob to optimize performance. Lifecycle management can help delete old versions automatically.
+  longDescription: |-
+    偶発的な変更または削除から回復し、BLOB 操作の待機時間を管理するには、Azure ストレージ アカウントのバージョン管理を有効にすることを検討してください。 Microsoft は、パフォーマンスを最適化するために、BLOB ごとに 1000 未満のバージョンを維持することを推奨しています。ライフサイクル管理は、古いバージョンを自動的に削除するのに役立ちます。
   potentialBenefits: Recover data, manage latency
   pgVerified: true
   publishedToLearn: false
@@ -104,16 +100,15 @@
   learnMoreLink:
     - name: Blob versioning
       url: "https://learn.microsoft.com/azure/storage/blobs/versioning-overview "
-
-- description: Enable point-in-time restore for GPv2 accounts to safeguard against data loss
+- description: データ損失を防ぐために GPv2 アカウントのポイントインタイム復元を有効にする
   aprlGuid: 1b965cb9-7629-214e-b682-6bf6e450a100
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Low
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    Consider enabling point-in-time restore for standard general purpose v2 accounts with flat namespace to protect against accidental deletion or corruption by restoring block blob data to an earlier state.
+  longDescription: |-
+    ブロック BLOB データを以前の状態に復元することで、偶発的な削除や破損から保護するために、フラットな名前空間を持つ標準の汎用 v2 アカウントに対してポイントインタイム復元を有効にすることを検討してください。
   potentialBenefits: Protects data from loss/corruption
   pgVerified: true
   publishedToLearn: false
@@ -125,16 +120,15 @@
       url: "https://learn.microsoft.com/azure/storage/blobs/point-in-time-restore-overview"
     - name: Perform a point-in-time restore on block blob data
       url: "https://learn.microsoft.com/azure/storage/blobs/point-in-time-restore-manage?tabs=portal"
-
-- description: Monitor all blob storage accounts
+- description: すべての BLOB ストレージ アカウントを監視する
   aprlGuid: 96cb8331-6b06-8242-8ce8-4e2f665dc679
   recommendationTypeId: null
   recommendationControl: Monitoring and Alerting
   recommendationImpact: Low
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    For critical applications and business processes relying on Azure, monitoring and alerts are crucial. Resource logs are only stored after creating a diagnostic setting to route logs to specified locations, requiring selection of log categories to collect.
+  longDescription: |-
+    Azure に依存する重要なアプリケーションとビジネス プロセスにとって、監視とアラートは非常に重要です。リソース ログは、ログを指定された場所にルーティングするための診断設定を作成した後にのみ保存され、収集するログ カテゴリの選択が必要になります。
   potentialBenefits: Enhanced alerting and log analysis
   pgVerified: true
   publishedToLearn: false
@@ -146,16 +140,15 @@
       url: "https://learn.microsoft.com/azure/storage/blobs/monitor-blob-storage"
     - name: Best practices for monitoring Azure Blob Storage
       url: "https://learn.microsoft.com/azure/storage/blobs/blob-storage-monitoring-scenarios"
-
-- description: Consider upgrading legacy storage accounts to v2 storage accounts
+- description: 従来のストレージ アカウントを v2 ストレージ アカウントにアップグレードすることを検討してください。
   aprlGuid: 2ad78dec-5a4d-4a30-8fd1-8584335ad781
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: Low
   recommendationResourceType: Microsoft.Storage/storageAccounts
   recommendationMetadataState: Active
-  longDescription: |
-    General-purpose v2 accounts are recommended for most storage scenarios offering the latest features or the lowest per-gigabyte pricing. Legacy accounts like Standard general-purpose v1 and Blob Storage aren't advised by Microsoft but may fit specific scenarios.
+  longDescription: |-
+    最新の機能または最も低いギガバイトあたりの価格を提供するほとんどのストレージ シナリオには、汎用 v2 アカウントが推奨されます。標準汎用 v1 や Blob Storage などのレガシー アカウントは Microsoft によって推奨されていませんが、特定のシナリオに適合する可能性があります。
   potentialBenefits: Latest features, lowest cost
   pgVerified: true
   publishedToLearn: false
