--- a/azure-resources/Subscription/subscriptions/recommendations.yaml
+++ b/azure-resources/Subscription/subscriptions/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Do not create more than 2000 Citrix VDA servers per subscription
+- description: サブスクリプションごとに 2000 を超える Citrix VDA サーバーを作成しないでください
   aprlGuid: c041d596-6c97-4c5f-b4b3-9cd37628f2e2
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: High
   recommendationResourceType: Microsoft.Subscription/Subscriptions
   recommendationMetadataState: Active
-  longDescription: |
-    A Citrix Managed Azure subscription supports VMs with VDA for app/desktop delivery, excluding other machines like Cloud Connectors. When close to the limit, signaled by a dashboard notification, and with sufficient licenses, request another subscription. Can't exceed the given limits for catalogs.
+  longDescription: |-
+    Citrix Managed Azure サブスクリプションは、クラウド コネクタなどの他のマシンを除き、アプリ/デスクトップ配信用の VDA を備えた VM をサポートします。制限に近づき、ダッシュボード通知によって通知され、十分なライセンスがある場合は、別のサブスクリプションをリクエストします。カタログに指定された制限を超えることはできません。
   potentialBenefits: Avoids hitting limit, ensures reliability
   pgVerified: true
   publishedToLearn: false
@@ -16,16 +16,15 @@
   learnMoreLink:
     - name: Citrix Limits
       url: "https://docs.citrix.com/en-us/citrix-daas-azure/limits"
-
-- description: Subscriptions should not be placed under the Tenant Root Management Group
+- description: サブスクリプションはテナント ルート管理グループの下に配置しないでください
   aprlGuid: 5ada5ffa-7149-4e49-9fbf-e67be7c2594c
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Subscription/Subscriptions
   recommendationMetadataState: Active
-  longDescription: |
-    The root management group in Azure is designed for organizational hierarchy, allowing for all management groups and subscriptions to fold into it.
+  longDescription: |-
+    Azure のルート管理グループは組織階層向けに設計されており、すべての管理グループとサブスクリプションをそのグループに組み込むことができます。
   potentialBenefits: Enhanced security, compliance, and management
   pgVerified: true
   publishedToLearn: false
