--- a/azure-resources/Web/serverFarms/recommendations.yaml
+++ b/azure-resources/Web/serverFarms/recommendations.yaml
@@ -1,12 +1,12 @@
-﻿- description: Migrate App Service to availability Zone Support
+- description: App Service を可用性ゾーンのサポートに移行する
   aprlGuid: 88cb90c2-3b99-814b-9820-821a63f600dd
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Web/serverFarms
   recommendationMetadataState: Active
-  longDescription: |
-    Azure's feature of deploying App Service plans across availability zones enhances resiliency and reliability by ensuring operation during datacenter failures, providing redundancy without needing different regions, thus minimizing downtime and maintaining uninterrupted services.
+  longDescription: |-
+    可用性ゾーン全体に App Service プランを展開する Azure の機能は、データセンター障害時の運用を確保し、別のリージョンを必要とせずに冗長性を提供することで回復力と信頼性を強化し、ダウンタイムを最小限に抑え、中断のないサービスを維持します。
   potentialBenefits: Enhances app resiliency and reliability
   pgVerified: false
   publishedToLearn: false
@@ -18,16 +18,15 @@
       url: "https://learn.microsoft.com/en-us/azure/reliability/migrate-app-service"
     - name: High availability enterprise deployment using App Service Environment
       url: "https://learn.microsoft.com/en-us/azure/architecture/reference-architectures/enterprise-integration/ase-high-availability-deployment"
-
-- description: Use Standard or Premium tier
+- description: Standard または Premium レベルを使用する
   aprlGuid: b2113023-a553-2e41-9789-597e2fb54c31
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: Microsoft.Web/serverFarms
   recommendationMetadataState: Active
-  longDescription: |
-    Choose Standard/Premium Azure App Service Plan for robust apps with advanced scaling, high availability, better performance, and multiple slots, ensuring resilience and continuous operation.
+  longDescription: |-
+    高度なスケーリング、高可用性、優れたパフォーマンス、複数のスロットを備えた堅牢なアプリを実現するには、Standard/Premium Azure App Service Plan を選択して、復元力と継続的な運用を確保します。
   potentialBenefits: Enhanced scaling and reliability
   pgVerified: false
   publishedToLearn: false
@@ -37,16 +36,15 @@
   learnMoreLink:
     - name: Resiliency checklist for specific Azure services
       url: "https://learn.microsoft.com/en-us/azure/architecture/checklist/resiliency-per-service#app-service"
-
-- description: Avoid scaling up or down
+- description: スケールアップまたはスケールダウンを避ける
   aprlGuid: 07243659-4643-d44c-a1c6-07ac21635072
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Web/serverFarms
   recommendationMetadataState: Active
-  longDescription: |
-    Avoid frequent scaling up/down of Azure App Service instances to prevent service disruptions. Choose the right tier and size for the workload and scale out for traffic changes, as scaling adjustments can trigger application restarts.
+  longDescription: |-
+    サービスの中断を防ぐために、Azure App Service インスタンスの頻繁なスケールアップ/スケールダウンは避けてください。スケーリングの調整によりアプリケーションの再起動がトリガーされる可能性があるため、ワークロードに適切な層とサイズを選択し、トラフィックの変化に合わせてスケールアウトします。
   potentialBenefits: Minimizes restarts, enhances stability
   pgVerified: false
   publishedToLearn: false
@@ -56,16 +54,15 @@
   learnMoreLink:
     - name: Resiliency checklist for specific Azure services
       url: "https://learn.microsoft.com/en-us/azure/architecture/checklist/resiliency-per-service#app-service"
-
-- description: Create separate App Service plans for production and test
+- description: 実稼働用とテスト用に個別の App Service プランを作成する
   aprlGuid: dbe3fd66-fb2a-9d46-b162-1791e21da236
   recommendationTypeId: null
   recommendationControl: Governance
   recommendationImpact: High
   recommendationResourceType: Microsoft.Web/serverFarms
   recommendationMetadataState: Active
-  longDescription: |
-    It is strongly recommended to create separate App Service plans for production and test environments to avoid using slots within your production deployment for testing purposes.
+  longDescription: |-
+    テスト目的で運用環境のデプロイ内のスロットを使用しないように、運用環境とテスト環境に個別の App Service プランを作成することを強くお勧めします。
   potentialBenefits: Protects prod performance; avoids test impact
   pgVerified: false
   publishedToLearn: false
@@ -75,16 +72,15 @@
   learnMoreLink:
     - name: Resiliency checklist for specific Azure services
       url: "https://learn.microsoft.com/en-us/azure/architecture/checklist/resiliency-per-service#app-service"
-
-- description: Enable Autoscale/Automatic scaling to ensure adequate resources are available to service requests
+- description: 自動スケール/自動スケーリングを有効にして、サービス リクエストに適切なリソースを利用できるようにします。
   aprlGuid: 6320abf6-f917-1843-b2ae-4779c35985ae
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.Web/serverFarms
   recommendationMetadataState: Active
-  longDescription: |
-    Enabling Autoscale/Automatic Scaling for your Azure App Service ensures sufficient resources for incoming requests. Autoscaling is rule-based, whereas Automatic Scaling, a newer feature, automatically adjusts resources based on HTTP traffic.
+  longDescription: |-
+    Azure App Service の自動スケール/自動スケーリングを有効にすると、受信リクエストに対して十分なリソースが確保されます。自動スケーリングはルールベースですが、新しい機能である自動スケーリングは HTTP トラフィックに基づいてリソースを自動的に調整します。
   potentialBenefits: Optimizes resources for traffic
   pgVerified: false
   publishedToLearn: false
